sass/style.scss
@import './root.scss';
@import './mixins.scss';

/* Start main doc */
@media (prefers-color-scheme: dark) { html { background-color: #181a1b; } }
html,
body {
    a {
        &:hover,
        &:focus {
            color: var(--purple-l);
            opacity: 1 !important;
            @media(prefers-color-scheme: 'dark') {
                color: var(--purple);
            }
        }
        @include transition;
        color: black;
    }
    background: #f7f7f7;
    font-family: system-ui,
                 -apple-system,
                 Segoe UI,
                 Roboto,
                 Helvetica,
                 Arial,
                 sans-serif,
                 Apple Color Emoji,
                 Segoe UI Emoji;
    p { line-height: 1.5rem; }
    article a p,
    article p { line-height: 1rem; }
    @media (prefers-color-scheme: dark) {
        background: #333333;
        color: #e8e6e3;
        a { color: #e8e6e3; }
    }
    margin: 0 auto;
    padding: var(--body-padding-y) var(--body-padding-x);
    max-width: var(--body-max-width);
}

.adj {
  aside {
    img { max-width: 100%; }
  }
  @media(min-width: 650px) {
    div > :first-child { margin-top: 0; }
    display: flex;
    flex-direction: row;
    .bio > .links {
      font-weight: 600;
      font-size: 1.2rem;
    }
    aside {
      margin-right: 2rem;
      hr { display: none; }
      img { max-width: 100%; }
    }
  }
}

#timeline {
    .date {
        font-weight: 400;
        opacity: 0.8;
        font-size: .9rem;
    }
}

.timeline-item {
    border: 0 solid #ffffff;
    border-left-width: .2rem;
    padding-left: .5rem;
}
.timeline-item.eol { border-color: var(--eol); }
.timeline-item.active { border-color: var(--active); }
.timeline-item.released { border-color: var(--released); }
.timeline-item.progress { border-color: var(--progress); }

code {
    background: #383838;
    @media (prefers-color-scheme: 'dark') { background: #111827; }
    color: #e6e1dc;
    padding: .2rem;
}

footer {
    padding-top: 1rem;
    text-align: center;
    opacity: .8;
    ul {
        list-style: none;
        padding-left: 0;
        li {
            padding: .25rem 0;
        }
    }
}

.item {
    background: #383838;
    @media (prefers-color-scheme: 'dark') { background: #111827; }
    border-radius: .25rem;
    padding: 1rem;
    @include transition;
    a {
        color: #e6e1dc;
        text-decoration: none;
        img {
            border-radius: .25rem;
        }
        &:hover,
        &:focus {
            color: var(--purple);
        }
    }
}

.readable {
    margin: 1rem auto;
    img { max-width: 100%; }
}

.title {
    text-align: center;
    font-size: 3rem;
    margin-top: 0;
}
.subtitle {
    text-align: center;
    line-height: 1.25;
    font-size: 1.25rem;
    .disclaimer {
        font-style: normal;
        font-size: 1rem;
    }
}

nav {
    display: flex;
    align-items: center;
    justify-content: center;
    ul {
        display: flex;
        list-style: none;
        text-align: center;
        margin: 0;
        padding: 0;
        li {
            display: flex;
            flex-direction: column;
            justify-content: center;
            margin-top: .9rem;
            margin-bottom: .9rem;
            padding: .5rem;
        }
        li.home {
            &:hover,
            &:focus {
                svg path {
                    color: var(--purple-l);
                    stroke: var(--purple-l);
                    @media (prefers-color-scheme: 'dark') {
                        color: var(--purple);
                        stroke: var(--purple);
                    }
                }
            }
            svg path {
                @include transition;
                @media (prefers-color-scheme: 'dark') {
                    stroke: white;
                    color: white;
                }
            }
        }
    }
}

.disclaimer {
    font-style: italic;
    opacity: .8;
}

/*@media (min-width: 600px) {
  .feed {
    display: grid;
    grid-template-columns: repeat(2, minmax(0,1fr));
  }
}*/

.feeds {
    @include feed-grid;
    justify-content: center;
    grid-template-columns: repeat(1, minmax(0,1fr));
    @media (min-width: 640px) {
        grid-template-columns: repeat(2, minmax(0,1fr));
    }
}

.post {
  // margin: 0 .5rem;
  a {
      &:hover,
      &:focus {
          color: white;
          h3,
          p { background: black; }
          @media (prefers-color-scheme: 'dark') {
              color: black;
              h3,
              p { background: white; }
          }
      }
      text-decoration: none;
      font-weight: bold;
      transition: none;
  }
}

.himg {
    display: none;
    width: 8rem;
    height: 8rem;
}
.himgl:hover + .himg { display: block; }

